# skylab2iai

./: .gitignore  LICENSE  MANIFEST.in  README.md  TESTING.md  pyproject.toml  quick_test.py  run_tests.bat  run_tests.sh  test_github_install.py  test_main.py
.github/workflows/: publish.yml  test.yml
examples/: colab_example.ipynb
src/config/database/: data_connection.py
src/repository/: plate_repository.py
src/service/: plate_frame.py
src/skylab2iai/: __init__.py
src/skylab2iai/catalog/: __init__.py  catalog.py
src/skylab2iai/config/database/: data_connection.py
src/skylab2iai/repository/: plate_frame_repository.py  plate_repository.py
src/skylab2iai/service/: plate_frame.py
src/skylab2iai/storage/: plate.py  plate_frame.py  skylab-data.db  sql_connection.py
test/: README.md  conftest.py  test_catalog.py  test_init.py  test_integration.py  test_plate_frame.py  test_sql_connection.py
